fix images overlapping footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,6 +208,7 @@
  * Page content
  */
 .page-content {
+height: auto;
     padding: $spacing-unit 0;
 }
 
