--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -333,6 +333,7 @@ div.headerwords {
 
 #main_content {
   padding-top: 40px;
+  padding-bottom: 70px;
 }
 
 #footer_wrap {
